# libzstd-seek

./: .gitignore  CMakeLists.txt  FUZZING.md  PKGBUILD  README.md  TESTING.md  mman_compat.h  zstd-seek.c  zstd-seek.h
.github/workflows/: aur.yml  ci.yml
examples/: CMakeLists.txt  README.md  decompressor.c  tar-zst-list.c
fuzz/: CMakeLists.txt  fuzz_decompress.c  fuzz_jumptable.c  fuzz_seekable.c  gen_corpus.sh  zstd_seek.dict
tests/: CMakeLists.txt  gen_seekable.c  helpers.sh  test_api.sh  test_coverage.sh  test_error_paths.sh  test_heavy.sh  test_reference.sh  test_roundtrip.sh  test_seek.c
